# wk-predictor

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
configs/: base.yaml  bracket_2026.yaml  bracket_placeholder.yaml  market_calibration.yaml  polymarket_worldcup_discovery.yaml  pool_scoring.yaml
data/: README.md
data/raw/: fixtures.csv  players.csv  results.csv  results.example.csv  sources.yaml  teams.csv
data/raw/polymarket/: README.md  (+2 more)
docs/: architecture.md  cleanup_plan.md  configuration.md  frontend_data.md  overnight-goal.md  polymarket.md  prediction_pipeline.md  results_workflow.md
frontend/: index.html  package.json  vite.config.ts
frontend/public/: frontend_data.json
frontend/src/: App.tsx  styles.css  types.ts
outputs/run-comparisons/: comparison_summary.md  final_standings_candidate_deltas.csv  final_standings_recommendation_diff.csv  metadata_diff.json  round1_score_changes.csv  top_scorer_candidate_deltas.csv
src/wk2026_model/: __init__.py  cli.py  config.py  results.py
tests/: test_bracket.py  test_cli.py  test_compare.py  test_dixon_coles.py  test_exact_score_markets.py  test_final_standings.py  test_group_simulation.py  test_loaders.py  test_market_calibration.py  test_market_compare.py  test_market_mapping.py  test_match_market_odds.py  test_outputs.py  test_poisson.py  test_polymarket_client.py  test_polymarket_discovery.py  test_pool_probabilities.py  test_pool_scoring.py  test_results.py  test_schemas.py  test_score_selection.py  test_scorers.py  test_tournament_simulation.py
(+91 files in other folders)
