[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wk2026-model"
version = "0.1.0"
description = "Een lokaal en uitbreidbaar voorspelmodel voor het WK voetbal 2026."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "WK 2026 Predictor contributors" },
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.scripts]
wk2026 = "wk2026_model.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
  "pandas-stubs>=2.2",
  "types-pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wk2026_model"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["wk2026_model"]
